--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,7 @@
   "content_scripts": [
     {
       "matches": ["https://www.facebook.com/*"],
-      "js": ["scripts/content.js"]
+      "js": ["dist/bundle.js"]
     }
   ]
 }
