--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "dotenv-webpack": "^8.1.0",
     "firebase": "^11.1.0",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1"
