--- a/package.json
+++ b/package.json
@@ -20,13 +20,6 @@
     "stream-browserify": "^3.0.0",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
-    "webpack-node-externals": "^3.0.0",
-    "util": "^0.12.5",
-    "process": "^0.11.10"
-  },
-  "dependencies": {
-    "puppeteer": "^24.1.1",
-    "puppeteer-extra": "^3.3.6",
-    "puppeteer-extra-plugin-stealth": "^2.11.2"
+    "webpack-node-externals": "^3.0.0"
   }
 }
