--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "firebase": "^11.1.0",
     "node-polyfill-webpack-plugin": "^4.1.0",
     "path-browserify": "^1.0.1",
+    "rimraf": "^5.0.10",
     "stream-browserify": "^3.0.0",
     "webpack": "^5.97.1",
-    "webpack-cli": "^6.0.1",
-    "webpack-node-externals": "^3.0.0"
+    "webpack-cli": "^6.0.1"
   }
 }
