--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "stream-browserify": "^3.0.0",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1"
+  },
+  "dependencies": {
+    "socket.io-client": "^4.8.1"
   }
 }
